- increase version to 1.3.0 - update Java compatibility to 17 - refactoring / documenting - retry mechanism to make it more stable